<resources>
    <string name="app_name">Dude, Where\'s My Cash?</string>
    <string name="start_button">Click to Start!</string>
    <string name="welcome">Welcome!</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="enter_info">Enter Your Information</string>
    <string name="user_id">UserID:</string>
    <string name="password">Password:</string>
    <string name="create_account_button">Create Account</string>
    <string name="user_name">Name:</string>
    <string name="budget_amt">Budget Amount:</string>
</resources>